@@ -137,6 +137,9 @@ documents those changes that are of interest to users and administrators.
  -- slurmstepd - report and log I/O setup failure using corresponding error
     code during job start.
  -- Steps may only overlap with steps that also used --overlap.
+ -- Add --overlap=force option for srun. This option allows a step to overlap
+    all other running steps on all resources (CPUs, memory, and GRES), even
+    those steps that did not specify --overlap.
 
 * Changes in Slurm 21.08.7
 ==========================
